--- a/nuevaReserva/templates/nuevaReserva.html
+++ b/nuevaReserva/templates/nuevaReserva.html
@@ -110,7 +110,7 @@
     {{ message }}
   </div>
   {% else %}
-  <div class=" alert alert-error">
+  <div class=" alert alert-error" style="text-align: center;">
     {{ message }}
     <h2 id="countdown">8</h2>
   </div>
